tests/fixtures/compile_errors/cannot_move2.fe
contract Foo:

  pub def foo():
    x:u256[10]
    y:u256[10]
    c:u256[20] = x + y